# Shorty-rs

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20250508_create_url_mappings.sql
src/: config.rs  errors.rs  main.rs
src/api/: mod.rs  route.rs
src/api/service/: alias_redirection.rs  healthcheck.rs  mod.rs
src/api/v1/: mod.rs
src/api/v1/url_handler/: create_shorturl.rs  mod.rs
src/database/: postgres.rs
src/utils/: mod.rs
src/utils/logging/: mod.rs
src/utils/url_generator/: mod.rs
